2004-07-11  Martin Mares  <mj@ucw.cz>

	* lib/sysfs.c (sysfs_get_resources): Arguments now correspond
	to the format string. [Patch by Bill Nottingham]

2004-07-05  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test7.

	* lspci.c (config_fetch): Wanted to merge Matthew's bug fix, but
	ended up with rewriting the fetching mechanism to be fully dynamic,
	but avoid reading config space registers not explicitly requested.

2004-06-29  Matthew Wilcox <willy@debian.org>

	* lspci.c: More work on PCI Express dumping.

	* lib/header.h: Updated PCI Express capability definitions.

	* lib/proc.c (proc_read): Removed bogus warning.

	* common.c (xrealloc): Introduced.

	* lspci.man: Added -xxxx.

2004-06-27  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test6.

	* lspci.c (show_msix), lib/header.h: Added dumping of MSI-X cap.
	Patch by Roland Dreier <roland@topspin.com>, cleaned up by me.

	* lspci.c (show_pcix_nobridge, show_pcix_bridge): Handle config_fetch()
	failures.

	* lib/header.h: Added PCI Express extended capabilities. Again by Matthew.

	* lspci.c (show_express): Added dumping of PCI Express cap.
	Patch by Matthew Wilcox.

	* lib/header.h: Added a list of PCI 3.0 capabilities and also details
	on PCI Express caps. Patch by Matthew Wilcox <willy@debian.org>.

	* lspci.c (check_root): Gone. No explicit checks for root are needed,
	report correct errors reported by the libpci instead.

	* lspci.c: Added dumping of the extended config space on "-xxxx".
	Better caching of config registers.

	* setpci.c (main): Allow access to whole 4096 bytes of the config space.

	* lib/sysfs.c, lib/proc.c: Don't print error messages on short reads,
	just return the appropriate error code.

	* lib: Added support for extended (4096-byte) configuration space,
	currently implemented only in Linux proc and sysfs access methods
	and of course in the dump reader.

2004-05-29  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test5.
